<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_sort_popular">Sort by popularity</string>
    <string name="action_sort_rate">Sort by rate</string>
    <string name="title_activity_movie">Movie Detail</string>
    <string name="action_share">Share</string>
    <string name="release_date_label">Release Date</string>
    <string name="vote_average_label">Vote</string>
    <string name="hint_vote">5.0</string>
    <string name="hint_release_date">DD/MM/YYYY</string>
    <string name="poster">Movie Poster</string>
    <string name="hint_overview">Overview</string>
    <string name="action_favorite">Favorite</string>
    <string name="content_authority">com.vstechlab.popularmovies.app</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_favorite">Favorite</string>
    <string name="title_activity_review">Review</string>
    <string name="btn_read_review">Read Review</string>
    <string name="no_movie_selected_msg">No Movie Selected!</string>
</resources>
