<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vstechlab.popularmovies.movie.MovieFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lly_container_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/fragment_movie_iv_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="2"
                    android:contentDescription="@string/poster" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date_label"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="@dimen/abc_text_size_body_1_material" />

                    <TextView
                        android:id="@+id/fragment_movie_tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_release_date"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="@dimen/abc_text_size_body_2_material" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/onegrid"
                        android:text="@string/vote_average_label"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="@dimen/abc_text_size_body_1_material" />

                    <TextView
                        android:id="@+id/fragment_movie_tv_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_vote"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="@dimen/abc_text_size_body_2_material" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lly_container_poster"
                android:layout_marginTop="@dimen/onegrid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_movie_tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world"
                    android:textSize="@dimen/abc_text_size_display_1_material" />


                <TextView
                    android:id="@+id/fragment_movie_tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_overview" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
